syntax = "proto3";

package entpb;

import "google/protobuf/timestamp.proto";
option go_package = "flight-service/ent/proto/entpb";

message QueryFlightInput{
  string name = 2 ;
  string from = 3 ;
  string to = 4 ;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp return_date = 10 ;
  google.protobuf.Timestamp depart_time = 6 ;
  string status = 7 ;
  int32 available_slots = 8 ;
  string flight_plane = 9 ;
  int32 size = 11;
  int32 page = 12;
}

message Flight {
  int32 id = 1;
  string name = 2 ;
  string from = 3 ;
  string to = 4 ;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp return_date = 12 ;
  google.protobuf.Timestamp depart_time = 6 ;
  string status = 7 ;
  int32 available_slots = 8 ;
  string flight_plane = 9 ;
  google.protobuf.Timestamp created_at = 10 ;
  google.protobuf.Timestamp updated_at = 11 ;
}

message CreateFlightInput{
  string name = 2 ;
  string from = 3 ;
  string to = 4 ;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp depart_time = 6 ;
  google.protobuf.Timestamp return_date = 12 ;
  string status = 7 ;
  int32 available_slots = 8 ;
  string flight_plane = 9 ;
}

message UpdateFlightInput{
  int32 id = 1;
  string name = 2 ;
  string from = 3 ;
  string to = 4 ;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp depart_time = 6 ;
  google.protobuf.Timestamp return_date = 12 ;
  string status = 7 ;
  int32 available_slots = 8 ;
  string flight_plane = 9 ;
}

message SearchFlightResponse{
  repeated Flight flights = 1;
  int32 size = 11;
  int32 page = 12;
  int32 totalPages = 13;
  int32 totalRecords = 14;
}

service FlightService{
  rpc CreateFlight(CreateFlightInput) returns (Flight);
  rpc UpdateFlight(UpdateFlightInput) returns (Flight);
  rpc SearchFlights(QueryFlightInput) returns (SearchFlightResponse);
}
